Criando Conexao frmModeloA
Apenas Muito Codigo. Vamos limpar tudo.

--- a/MicrosoftSQLConnections/MSSQLConnections/MSSQLConnections.csproj
+++ b/MicrosoftSQLConnections/MSSQLConnections/MSSQLConnections.csproj
@@ -31,16 +31,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionsSQLModeloA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AppStatus\AppStatus.csproj">
+      <Project>{169c7ca0-88c3-460f-9a4f-0524d88afc36}</Project>
+      <Name>AppStatus</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
