--- a/MicrosoftSQLConnections/DesktopConnections/DesktopConnections.csproj
+++ b/MicrosoftSQLConnections/DesktopConnections/DesktopConnections.csproj
@@ -44,11 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmModeloA.cs">
+    <Compile Include="frmModelA.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmModeloA.Designer.cs">
-      <DependentUpon>frmModeloA.cs</DependentUpon>
+    <Compile Include="frmModelA.Designer.cs">
+      <DependentUpon>frmModelA.cs</DependentUpon>
     </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
@@ -58,8 +58,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frmModeloA.resx">
-      <DependentUpon>frmModeloA.cs</DependentUpon>
+    <EmbeddedResource Include="frmModelA.resx">
+      <DependentUpon>frmModelA.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
