--- a/MicrosoftSQLConnections/MSSQLConnections/MSSQLConnections.csproj
+++ b/MicrosoftSQLConnections/MSSQLConnections/MSSQLConnections.csproj
@@ -34,7 +34,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionsSQLModeloA.cs" />
+    <Compile Include="ConnectionsSQLModelA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
