Update Name Project
Update Name forms and Projects

--- a/MicrosoftSQLConnections/ConnectionsMSSQLDesktop/ConnectionsMSSQLDesktop.csproj
+++ b/MicrosoftSQLConnections/ConnectionsMSSQLDesktop/ConnectionsMSSQLDesktop.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7CA8ECD1-5334-499E-A4CF-1CB69220946E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DemoConnections</RootNamespace>
-    <AssemblyName>DemoConnections</AssemblyName>
+    <RootNamespace>ConnectionsMSSQLDesktop</RootNamespace>
+    <AssemblyName>ConnectionsMSSQLDesktop</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -72,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
