--- a/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
+++ b/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
@@ -5,14 +5,14 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7CA8ECD1-5334-499E-A4CF-1CB69220946E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MSSQLDesktop</RootNamespace>
     <AssemblyName>MSSQLDesktop</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\nti\Desktop\aaaa\</PublishUrl>
+    <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -54,7 +54,6 @@
     <ManifestCertificateThumbprint>F613678974004368C9C3A16558FDDF2198A44738</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>MSSQLDesktop_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -62,6 +61,7 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\ConnectionsSQLModelA.cs" />
+    <Compile Include="Class\ConnectionsXML.cs" />
     <Compile Include="Class\Debugar.cs" />
     <Compile Include="Form\frmModelA.cs">
       <SubType>Form</SubType>
