--- a/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
+++ b/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
@@ -62,6 +62,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup />
+  <PropertyGroup />
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
@@ -80,19 +81,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\AppConfigXML.cs" />
-    <Compile Include="Class\ConnectionsSQLModelA.cs" />
+    <Compile Include="Class\ConnectionsSQL.cs" />
     <Compile Include="Class\ConnectionsConfig.cs" />
     <Compile Include="Class\Debugar.cs" />
-    <Compile Include="Form\frmModelA.cs">
+    <Compile Include="Form\frmModel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\frmModelA.Designer.cs">
-      <DependentUpon>frmModelA.cs</DependentUpon>
+    <Compile Include="Form\frmModel.Designer.cs">
+      <DependentUpon>frmModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Class\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form\frmModelA.resx">
-      <DependentUpon>frmModelA.cs</DependentUpon>
+    <EmbeddedResource Include="Form\frmModel.resx">
+      <DependentUpon>frmModel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
