--- a/MicrosoftSQLConnections/MSSQLDesktop/App.config
+++ b/MicrosoftSQLConnections/MSSQLDesktop/App.config
@@ -5,16 +5,13 @@
       <section name="MSSQLDesktop.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
-  <connectionStrings>
-    <add name="MSSQLDesktop.Properties.Settings.stringConnSQLModel"
-      connectionString="stringConnSQLModel" />
-  </connectionStrings>
+  <connectionStrings />
   <startup>
   </startup>
   <userSettings>
     <MSSQLDesktop.Properties.Settings>
       <setting name="stringSQLModel" serializeAs="String">
-        <value>stringSQLModel</value>
+        <value />
       </setting>
     </MSSQLDesktop.Properties.Settings>
   </userSettings>
