--- a/MicrosoftSQLConnections/MSSQLDesktop/Properties/Settings.settings
+++ b/MicrosoftSQLConnections/MSSQLDesktop/Properties/Settings.settings
@@ -3,14 +3,14 @@
   <Profiles />
   <Settings>
     <Setting Name="stringSQLModel" Type="System.String" Scope="User">
-      <Value Profile="(Default)">stringSQLModel</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="stringConnSQLModel" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;stringConnSQLModel&lt;/ConnectionString&gt;
+  &lt;ConnectionString /&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">stringConnSQLModel</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
