--- a/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
+++ b/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
@@ -69,6 +69,7 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
