--- a/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
+++ b/MicrosoftSQLConnections/MSSQLDesktop/MSSQLDesktop.csproj
@@ -70,6 +70,7 @@
   <PropertyGroup />
   <PropertyGroup />
   <PropertyGroup />
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
